{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 11,
  "lineage": "08d2f377-6780-2ee1-dbe1-ac182dd100b4",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654178630:vpc/vpc-0c042eb4c92690eb1",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0d45c119ab2a819eb",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0dcd3ef5fd5165919",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c042eb4c92690eb1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09a64db2d2403abb6",
            "owner_id": "654654178630"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "app-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654178630:loadbalancer/app/phonebook-lb-tf/33586f972dfc449f",
            "arn_suffix": "app/phonebook-lb-tf/33586f972dfc449f",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "phonebook-lb-tf-116465813.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654178630:loadbalancer/app/phonebook-lb-tf/33586f972dfc449f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "phonebook-lb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-061fcf8331a8ae779"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-057f79810b2a128ac"
              },
              {
                "subnet_id": "subnet-0932af422942fc545"
              },
              {
                "subnet_id": "subnet-0a90d8b2e755f9141"
              },
              {
                "subnet_id": "subnet-0d3cfca45c2a9b069"
              },
              {
                "subnet_id": "subnet-0dac507c12fafa5f6"
              },
              {
                "subnet_id": "subnet-0e266aeec177debf4"
              }
            ],
            "subnets": [
              "subnet-057f79810b2a128ac",
              "subnet-0932af422942fc545",
              "subnet-0a90d8b2e755f9141",
              "subnet-0d3cfca45c2a9b069",
              "subnet-0dac507c12fafa5f6",
              "subnet-0e266aeec177debf4"
            ],
            "vpc_id": "vpc-0c042eb4c92690eb1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "data.aws_subnets.pb-subnets",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "app-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654178630:listener/app/phonebook-lb-tf/33586f972dfc449f/f64e84d49e5991b7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:654654178630:targetgroup/phonebook-lb-tg/ff41eb132fabc8c6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654178630:listener/app/phonebook-lb-tf/33586f972dfc449f/f64e84d49e5991b7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:654654178630:loadbalancer/app/phonebook-lb-tf/33586f972dfc449f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.app-lb",
            "aws_alb_target_group.app-lb-tg",
            "aws_security_group.alb-sg",
            "data.aws_subnets.pb-subnets",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "app-lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654178630:targetgroup/phonebook-lb-tg/ff41eb132fabc8c6",
            "arn_suffix": "targetgroup/phonebook-lb-tg/ff41eb132fabc8c6",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654178630:targetgroup/phonebook-lb-tg/ff41eb132fabc8c6",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "phonebook-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0c042eb4c92690eb1"
          },
          "dependencies": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654178630:security-group/sg-061fcf8331a8ae779",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-061fcf8331a8ae779",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ALBSecurityGroup",
            "name_prefix": "",
            "owner_id": "654654178630",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TF_ALBSecurityGroup"
            },
            "tags_all": {
              "Name": "TF_ALBSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c042eb4c92690eb1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654178630:security-group/sg-0a2c11eb7bbeb37e9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a2c11eb7bbeb37e9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03b731f9d2de3fe9a"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "RDSSecurityGroup",
            "name_prefix": "",
            "owner_id": "654654178630",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TF_RDSSecurityGroup"
            },
            "tags_all": {
              "Name": "TF_RDSSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c042eb4c92690eb1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_security_group.server-sg",
            "data.aws_vpc.selected"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654178630:security-group/sg-03b731f9d2de3fe9a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b731f9d2de3fe9a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-061fcf8331a8ae779"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "WebServerSecurityGroup",
            "name_prefix": "",
            "owner_id": "654654178630",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TF_WebServerSecurityGroup"
            },
            "tags_all": {
              "Name": "TF_WebServerSecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c042eb4c92690eb1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-sg",
            "data.aws_vpc.selected"
          ]
        }
      ]
    }
  ]
}